<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/pay_type" />

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/landlord_name" />


            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/landload_phone" />


            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/payment_mode" />

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/date" />

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/payment_status" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:textColor="#EFE8E8"
                android:layout_gravity="end"
                android:id="@+id/tv_pay_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold" />

            <TextView
                android:textColor="#EFE8E8"
                android:layout_gravity="end"
                android:id="@+id/tv_landlord_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold" />

            <TextView
                android:textColor="#EFE8E8"
                android:layout_gravity="end"
                android:id="@+id/tv_landload_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold" />


            <TextView
            android:textColor="#EFE8E8"
            android:layout_gravity="end"
            android:id="@+id/tv_payment_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold" />

            <TextView
                android:textColor="#EFE8E8"
                android:layout_gravity="end"
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold" />


            <androidx.cardview.widget.CardView
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/tv_payment_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/poppins_semibold"
                    android:padding="@dimen/_5sdp"
                    android:text="success"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_12sdp" />
            </androidx.cardview.widget.CardView>



        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>